--- a/sources/Libre-Plantin-Regular.ufo/lib.plist
+++ b/sources/Libre-Plantin-Regular.ufo/lib.plist
@@ -25,6 +25,14 @@
 	<integer>0</integer>
 	<key>com.typemytype.robofont.layerOrder</key>
 	<array>
+		<string>ref</string>
+	</array>
+	<key>com.typemytype.robofont.ref.layerStrokeColor</key>
+	<array>
+		<real>1.0</real>
+		<real>0.75</real>
+		<real>0.0</real>
+		<real>0.7</real>
 	</array>
 	<key>com.typemytype.robofont.segmentType</key>
 	<string>curve</string>
