--- a/sources/Libre-Moretus-Bold.ufo/fontinfo.plist
+++ b/sources/Libre-Moretus-Bold.ufo/fontinfo.plist
@@ -9,7 +9,7 @@
 	<key>descender</key>
 	<integer>-250</integer>
 	<key>familyName</key>
-	<string>Libre Plantin</string>
+	<string>Libre Moretus</string>
 	<key>openTypeHeadCreated</key>
 	<string>2016/07/07 19:44:28</string>
 	<key>openTypeOS2WeightClass</key>
